<resources>
    <string name="app_name">RelativeLayout</string>
    <string name="natalie">natalie</string>
    <string name="kunalben">kunalben</string>
    <string name="lylame">lylame</string>
    <string name="kagure">kagure</string>
    <string name="omoju">omoju</string>
    <string name="anyjennie">anyjennie</string>
    <string name="amy">amy</string>
    <string name="anyjennie">anyjennie</string>
</resources>
